Initial game setup

--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
       "^assets/(.*)$": "<rootDir>/src/assets/$1",
       "^components/(.*)$": "<rootDir>/src/components/$1",
       "^lib/(.*)$": "<rootDir>/src/lib/$1",
+      "^hooks/(.*)$": "<rootDir>/src/hooks/$1",
       "^services/(.*)$": "<rootDir>/src/services/$1",
       "^store/(.*)$": "<rootDir>/src/store/$1",
       "^style/(.*)$": "<rootDir>/src/style/$1",
