--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "assets/*": ["src/assets/*"],
       "components/*": ["src/components/*"],
       "lib/*": ["src/lib/*"],
+      "hooks/*": ["src/hooks/*"],
       "services/*": ["src/services/*"],
       "store/*": ["src/store/*"],
       "style/*": ["src/style/*"],
