--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
 	"rules": {
     "react/jsx-one-expression-per-line": 0,
     "object-curly-newline": 0,
-    "import/prefer-default-export": ["off"]
+    "import/prefer-default-export": ["off"],
+    "no-plusplus": "off"
 	}
 }
