--- a/package.json
+++ b/package.json
@@ -74,10 +74,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "redux-logger": "^3.0.6",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "use-sound": "^4.0.0"
   },
   "browserslist": {
     "production": [
