--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "howler": "^2.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
